<resources>
    <string name="app_name">WPrax</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_cursos">Mis cursos</string>
    <string name="menu_descargas">Descargas</string>

    <string name="menu_progreso">Progreso</string>
    <string name="menu_herramientas">Herramientas</string>
    <string name="menu_perfil">Perfil</string>


    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Recurso de string para colaborador-->
    <string name="nombre">Nombre</string>}
    <string name="apellido">Apellidos</string>
    <string name="curso">Curso que dicta</string>
    <string name="correo">Correo</string>
    <string name="password">Password</string>

    <string name="listaColaboradores">Lista colaboradores</string>
</resources>
